--- a/web/index.html
+++ b/web/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>NREGA Automation Dashboard | v2.3.1 | Automate NREGA Tasks</title>
-    <meta name="description" content="Automate your NREGA tasks with the NREGA Automation Dashboard v2.3.1. Featuring new MR filling, Jobcard verification, and FTO Generation tools. Download for a free 30-day trial.">
+    <title>NREGA Automation Dashboard | v2.4.1 | Automate NREGA Tasks</title>
+    <meta name="description" content="Automate your NREGA tasks with the NREGA Automation Dashboard v2.4.1. Featuring new MR filling, Jobcard verification, and FTO Generation tools. Download for a free 30-day trial.">
     <meta name="keywords" content="NREGA, MGNREGA, automation, FTO Generation, dashboard, MR Fill, Jobcard Verification, MSR processor, wagelist, workcode generator, Palojori, Jharkhand, software, donation">
     <meta name="author" content="Rajat Poddar">
 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-    <meta property="og:title" content="NREGA Automation Dashboard v2.3.1">
+    <meta property="og:title" content="NREGA Automation Dashboard v2.4.1">
     <meta property="og:description" content="The ultimate tool to save time and automate your tedious NREGA data entry tasks, now with more features.">
     <meta property="og:image" content="https://nrega-dashboard.palojori.in/og-logo.png">
     <meta property="og:url" content="https://nrega-dashboard.palojori.in/">
@@ -81,7 +81,7 @@
                 <div class="container mx-auto px-4 sm:px-6 py-3 text-center text-white">
                     <p>
                         <span class="font-bold bg-white text-blue-600 rounded-full px-2 py-0.5 text-xs mr-2">NEW</span>
-                        <strong>Version 2.3.1 is here!</strong> Featuring new automation tools, bug fixes, and more.
+                        <strong>Version 2.4.1 is here!</strong> Featuring new automation tools, bug fixes, and more.
                         <a href="#downloads" class="underline ml-2 hover:text-blue-200">Download Now &rarr;</a>
                     </p>
                 </div>
@@ -97,8 +97,8 @@
                 <div id="downloads" class="mt-10">
                     <p class="text-gray-600 mb-4">Download the app and start your 30-day free trial instantly.</p>
                     <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4">
-                        <a href="https://github.com/rajatpoddar/Nrega_Automation/releases/download/v2.3.1/NREGA-Dashboard-v2.3.1.exe" class="bg-blue-600 text-white font-bold px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors text-lg w-full sm:w-auto">Download for Windows</a>
-                        <a href="https://github.com/rajatpoddar/Nrega_Automation/releases/download/v2.3.1/NREGA-Dashboard-2.3.1.dmg" class="bg-gray-700 text-white font-bold px-6 py-3 rounded-lg hover:bg-gray-800 transition-colors text-lg w-full sm:w-auto">Download for macOS</a>
+                        <a href="https://nrega-dashboard.palojori.in/updates/NREGA-Dashboard-v2.4.1-Setup.exe" class="bg-blue-600 text-white font-bold px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors text-lg w-full sm:w-auto">Download for Windows</a>
+                        <a href="https://nrega-dashboard.palojori.in/updates/NREGA-Dashboard-v2.4.1.dmg" class="bg-gray-700 text-white font-bold px-6 py-3 rounded-lg hover:bg-gray-800 transition-colors text-lg w-full sm:w-auto">Download for macOS</a>
                     </div>
                 </div>
             </main>
