--- a/web/contact.html
+++ b/web/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us | NREGA Automation Dashboard</title>
-    <meta name="description" content="Get in touch with the NREGA Automation Dashboard support team.">
+    <title>Contact Us | NREGA Bot</title>
+    <meta name="description" content="Get in touch with the NREGA Bot support team.">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,8 +19,8 @@
     <header class="bg-white/80 backdrop-blur-sm shadow-sm sticky top-0 z-50 border-b border-gray-200">
         <div class="container mx-auto px-4 sm:px-6 py-4 flex justify-between items-center">
             <a href="index.html" class="text-xl font-bold text-gray-900 flex items-center gap-2">
-                <img src="/logo.png" alt="NREGA Dashboard Logo" class="h-8 w-8 rounded-full">
-                <span>NREGA Dashboard</span>
+                <img src="/logo.png" alt="NREGA Bot Logo" class="h-8 w-8 rounded-full">
+                <span>NREGA Bot</span>
             </a>
             <a href="index.html" class="hidden md:inline-block bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors">&larr; Back to Home</a>
         </div>
@@ -45,7 +45,7 @@
                 <h2 class="text-2xl font-bold text-gray-900">Community Support</h2>
                 <p class="mt-2 text-gray-600">Join our WhatsApp group to connect with other users, share tips, and get community-based help. Please note that official support is handled via email.</p>
                 <div class="mt-4 text-center">
-                     <a href="https://chat.whatsapp.com/Bup3hDCH3wn2shbUryv8wn" target="_blank" class="inline-block bg-green-500 text-white font-semibold px-6 py-3 rounded-lg hover:bg-green-600 transition-colors">Join WhatsApp Group</a>
+                     <a href="https://chat.whatsapp.com/Bup3hDCH3wn2shbUryv8wn" target="_blank" rel="noopener noreferrer" class="inline-block bg-green-500 text-white font-semibold px-6 py-3 rounded-lg hover:bg-green-600 transition-colors">Join WhatsApp Group</a>
                 </div>
             </div>
         </div>
@@ -53,7 +53,7 @@
 
     <footer class="bg-white border-t">
         <div class="container mx-auto px-6 py-8 text-center text-gray-600 text-sm">
-            <p>&copy; 2025 NREGA Automation Dashboard by Rajat Poddar. All rights reserved.</p>
+            <p>&copy; 2025 NREGA Bot by Rajat Poddar. All rights reserved.</p>
         </div>
     </footer>
 
