--- a/web/privacy.html
+++ b/web/privacy.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy | NREGA Automation Dashboard</title>
-    <meta name="description" content="Privacy Policy for the NREGA Automation Dashboard application.">
+    <title>Privacy Policy | NREGA Bot</title>
+    <meta name="description" content="Privacy Policy for the NREGA Bot application.">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,8 +26,8 @@
     <header class="bg-white/80 backdrop-blur-sm shadow-sm sticky top-0 z-50 border-b border-gray-200">
         <div class="container mx-auto px-4 sm:px-6 py-4 flex justify-between items-center">
             <a href="index.html" class="text-xl font-bold text-gray-900 flex items-center gap-2">
-                <img src="/logo.png" alt="NREGA Dashboard Logo" class="h-8 w-8 rounded-full">
-                <span>NREGA Dashboard</span>
+                <img src="/logo.png" alt="NREGA Bot Logo" class="h-8 w-8 rounded-full">
+                <span>NREGA Bot</span>
             </a>
             <a href="index.html" class="hidden md:inline-block bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors">&larr; Back to Home</a>
         </div>
@@ -40,7 +40,7 @@
                 <p class="text-lg text-gray-600 mt-4">Last updated: July 25, 2025</p>
             </div>
             
-            <p>This Privacy Policy describes how the NREGA Automation Dashboard ("the Application") handles your information. Your privacy and data security are our top priorities.</p>
+            <p>This Privacy Policy describes how NREGA Bot ("the Application") handles your information. Your privacy and data security are our top priorities.</p>
             
             <h3>1. Information We Collect</h3>
             <p>The Application is designed to be privacy-focused. We only collect the absolute minimum information required for the Application to function:</p>
@@ -79,7 +79,7 @@
 
     <footer class="bg-white border-t">
         <div class="container mx-auto px-6 py-8 text-center text-gray-600 text-sm">
-            <p>&copy; 2025 NREGA Automation Dashboard by Rajat Poddar. All rights reserved.</p>
+            <p>&copy; 2025 NREGA Bot by Rajat Poddar. All rights reserved.</p>
         </div>
     </footer>
 
