--- a/web/refund.html
+++ b/web/refund.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cancellation & Refund Policy | NREGA Automation Dashboard</title>
-    <meta name="description" content="Cancellation and Refund Policy for the NREGA Automation Dashboard.">
+    <title>Cancellation & Refund Policy | NREGA Bot</title>
+    <meta name="description" content="Cancellation and Refund Policy for NREGA Bot.">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,8 +23,8 @@
     <header class="bg-white/80 backdrop-blur-sm shadow-sm sticky top-0 z-50 border-b border-gray-200">
         <div class="container mx-auto px-4 sm:px-6 py-4 flex justify-between items-center">
             <a href="index.html" class="text-xl font-bold text-gray-900 flex items-center gap-2">
-                <img src="/logo.png" alt="NREGA Dashboard Logo" class="h-8 w-8 rounded-full">
-                <span>NREGA Dashboard</span>
+                <img src="/logo.png" alt="NREGA Bot Logo" class="h-8 w-8 rounded-full">
+                <span>NREGA Bot</span>
             </a>
             <a href="index.html" class="hidden md:inline-block bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors">&larr; Back to Home</a>
         </div>
@@ -37,7 +37,7 @@
                 <p class="text-lg text-gray-600 mt-4">Last updated: July 25, 2025</p>
             </div>
             
-            <p>Thank you for supporting the NREGA Automation Dashboard. We appreciate your contribution which helps us maintain and improve the software.</p>
+            <p>Thank you for supporting NREGA Bot. We appreciate your contribution which helps us maintain and improve the software.</p>
             
             <p>Payments made to receive a license key are considered donations to support the project's ongoing development, server costs, and maintenance. Due to the nature of digital goods and the provision of a 30-day free trial period for evaluation, we have a strict no-refund policy.</p>
 
@@ -57,7 +57,7 @@
 
     <footer class="bg-white border-t">
         <div class="container mx-auto px-6 py-8 text-center text-gray-600 text-sm">
-            <p>&copy; 2025 NREGA Automation Dashboard by Rajat Poddar. All rights reserved.</p>
+            <p>&copy; 2025 NREGA Bot by Rajat Poddar. All rights reserved.</p>
         </div>
     </footer>
 
