--- a/web/versions.html
+++ b/web/versions.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Version History | NREGA Automation Dashboard</title>
-    <meta name="description" content="Download older versions of the NREGA Automation Dashboard.">
+    <title>Version History | NREGA Bot</title>
+    <meta name="description" content="Download older versions of NREGA Bot and the legacy NREGA Automation Dashboard.">
     <meta name="author" content="Rajat Poddar">
 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -24,8 +24,8 @@
     <header class="bg-white/80 dark:bg-gray-900/80 backdrop-blur-sm shadow-sm sticky top-0 z-50 dark:border-b dark:border-gray-800">
         <div class="container mx-auto px-4 sm:px-6 py-4 flex justify-between items-center">
             <a href="index.html" class="text-xl font-bold text-gray-900 flex items-center gap-2 dark:text-white">
-                <img src="/logo.png" alt="NREGA Dashboard Logo" class="h-8 w-8 rounded-full">
-                <span>NREGA Dashboard</span>
+                <img src="/logo.png" alt="NREGA Bot Logo" class="h-8 w-8 rounded-full">
+                <span>NREGA Bot</span>
             </a>
             <a href="index.html#downloads" class="bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors dark:bg-blue-500 dark:hover:bg-blue-600">&larr; Back to Main Page</a>
         </div>
@@ -36,13 +36,29 @@
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16">
                     <h2 class="text-4xl font-extrabold text-gray-900 dark:text-white">Version History & Downloads</h2>
-                    <p class="text-lg text-gray-600 dark:text-gray-400 mt-4 max-w-3xl mx-auto">Access previous releases of the NREGA Automation Dashboard.</p>
+                    <p class="text-lg text-gray-600 dark:text-gray-400 mt-4 max-w-3xl mx-auto">Access the latest and previous releases.</p>
                 </div>
 
                 <div class="max-w-4xl mx-auto space-y-8">
+                    
+                    <div class="bg-white dark:bg-gray-800 p-6 rounded-lg border-2 border-blue-500 dark:border-blue-500 shadow-lg">
+                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.5.0 (NREGA Bot)</h3>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: July 26, 2025</p>
+                        <ul class="list-disc list-inside mt-4 space-y-2 text-gray-700 dark:text-gray-300">
+                            <li>🚀 Major Rebranding: Application has been renamed from NREGA Dashboard to NREGA Bot.</li>
+                            <li>💳 Subscription UI Overhaul: Dynamic subscription status card on the 'About' page.</li>
+                            <li>🛠️ Improved UX: Added a dynamic action panel to renew or manage your subscription.</li>
+                            <li>📝 New Trial Process: Implemented a new registration form for server-side trial activation.</li>
+                            <li>🐞 Bug Fixes: Resolved various startup crashes and UI rendering issues for a smoother experience.</li>
+                        </ul>
+                        <div class="mt-6 flex flex-col sm:flex-row gap-4">
+                            <a href="https://nregabot.com/updates/NREGABot-v2.5.0-Setup.exe" class="bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors text-center">Download for Windows</a>
+                            <a href="https://nregabot.com/updates/NREGABot-v2.5.0-macOS.dmg" class="bg-gray-700 text-white font-semibold px-5 py-2 rounded-lg hover:bg-gray-800 transition-colors text-center">Download for macOS</a>
+                        </div>
+                    </div>
 
                     <div class="bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700 shadow-sm">
-                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.4.4</h3>
+                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.4.4 (NREGA Dashboard)</h3>
                         <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: July 24, 2025</p>
                         <ul class="list-disc list-inside mt-4 space-y-2 text-gray-700 dark:text-gray-300">
                             <li>✨ New "Verify ABPS" tab with auto-village and pagination handling.</li>
@@ -56,7 +72,7 @@
                     </div>
 
                     <div class="bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700 shadow-sm">
-                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.4.3</h3>
+                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.4.3 (NREGA Dashboard)</h3>
                         <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: July 23, 2025</p>
                         <ul class="list-disc list-inside mt-4 space-y-2 text-gray-700 dark:text-gray-300">
                             <li>✨ New "Add Activity" tab to automate adding default activities.</li>
@@ -70,7 +86,7 @@
                     </div>
 
                     <div class="bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700 shadow-sm">
-                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.4.2</h3>
+                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.4.2 (NREGA Dashboard)</h3>
                         <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: July 15, 2025</p>
                         <ul class="list-disc list-inside mt-4 space-y-2 text-gray-700 dark:text-gray-300">
                             <li>✨ New "Workcode Extractor" and Autocomplete for inputs.</li>
@@ -84,7 +100,7 @@
                     </div>
 
                     <div class="bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700 shadow-sm">
-                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.4.1</h3>
+                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.4.1 (NREGA Dashboard)</h3>
                         <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: July 8, 2025</p>
                         <ul class="list-disc list-inside mt-4 space-y-2 text-gray-700 dark:text-gray-300">
                             <li>🎨 Implemented a new, professional two-tone color theme.</li>
@@ -98,7 +114,7 @@
                     </div>
 
                      <div class="bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700 shadow-sm">
-                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.4.0</h3>
+                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.4.0 (NREGA Dashboard)</h3>
                         <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: July 1, 2025</p>
                         <ul class="list-disc list-inside mt-4 space-y-2 text-gray-700 dark:text-gray-300">
                             <li>🚀 Complete UI overhaul to a modern theme (CustomTkinter).</li>
@@ -118,7 +134,7 @@
 
     <footer class="bg-white border-t dark:bg-gray-900 dark:border-gray-800">
         <div class="container mx-auto px-6 py-10 text-center text-sm text-gray-600 dark:text-gray-400">
-            <p>&copy; 2025 NREGA Automation Dashboard by Rajat Poddar. All rights reserved.</p>
+            <p>&copy; 2025 NREGA Bot by Rajat Poddar. All rights reserved.</p>
         </div>
     </footer>
 </body>
