--- a/web/index.html
+++ b/web/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>NREGA Automation Dashboard | v2.4.4 | Automate NREGA Tasks</title>
-    <meta name="description" content="Automate your NREGA tasks with the NREGA Automation Dashboard v2.4.4. Featuring autocomplete for inputs, robust error handling, and a full suite of automation tools.">
-    <meta name="keywords" content="NREGA, MGNREGA, automation, FTO Generation, dashboard, MR Fill, Jobcard Verification, MSR processor, wagelist, workcode generator, Palojori, Jharkhand, software, donation">
+    <title>NREGA Bot | v2.5.0 | Automate NREGA Tasks</title>
+    <meta name="description" content="Automate your NREGA tasks with NREGA Bot v2.5.0. Featuring a new brand, subscription management, and a full suite of automation tools.">
+    <meta name="keywords" content="NREGA, MGNREGA, automation, FTO Generation, NREGA Bot, MR Fill, Jobcard Verification, MSR processor, wagelist, workcode generator, Palojori, Jharkhand, software, donation">
     <meta name="author" content="Rajat Poddar">
 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-    <meta property="og:title" content="NREGA Automation Dashboard v2.4.4">
-    <meta property="og:description" content="The ultimate tool to save time and automate your tedious NREGA data entry tasks, now with autocomplete and more robust features.">
-    <meta property="og:image" content="https://nrega-dashboard.palojori.in/og-logo.png">
-    <meta property="og:url" content="https://nrega-dashboard.palojori.in/">
+    <meta property="og:title" content="NREGA Bot v2.5.0">
+    <meta property="og:description" content="The ultimate tool to save time and automate your tedious NREGA data entry tasks, now rebranded as NREGA Bot.">
+    <meta property="og:image" content="https://nregabot.com/og-logo.png">
+    <meta property="og:url" content="https://nregabot.com/">
     <meta property="og:type" content="website">
 
     <script src="https://cdn.tailwindcss.com"></script>
@@ -45,8 +45,8 @@
     <header class="bg-white/80 dark:bg-gray-900/80 backdrop-blur-sm shadow-sm sticky top-0 z-50 dark:border-b dark:border-gray-800">
         <div class="container mx-auto px-4 sm:px-6 py-4 flex justify-between items-center">
             <a href="#home" class="text-xl font-bold text-gray-900 flex items-center gap-2 dark:text-white">
-                <img src="/logo.png" alt="NREGA Dashboard Logo" class="h-8 w-8 rounded-full">
-                <span>NREGA Dashboard</span>
+                <img src="/logo.png" alt="NREGA Bot Logo" class="h-8 w-8 rounded-full">
+                <span>NREGA Bot</span>
             </a>
             <nav class="hidden md:flex items-center space-x-8">
                 <a href="#home" class="text-gray-600 hover:text-blue-600 dark:text-gray-400 dark:hover:text-blue-400">Home</a>
@@ -83,7 +83,7 @@
                 <div class="container mx-auto px-4 sm:px-6 py-3 text-center text-white">
                     <p>
                         <span class="font-bold bg-white text-blue-600 rounded-full px-2 py-0.5 text-xs mr-2">NEW</span>
-                        <strong>Version 2.4.4 is here!</strong> Featuring autocomplete, bug fixes, and more.
+                        <strong>Version 2.5.0 is here!</strong> The app has been rebranded to NREGA Bot.
                         <a href="#downloads" class="underline ml-2 hover:text-blue-200">Download Now &rarr;</a>
                     </p>
                 </div>
@@ -94,13 +94,13 @@
                     Automate Your NREGA Tasks.
                 </h2>
                 <p class="mt-4 text-lg text-gray-600 max-w-3xl mx-auto dark:text-gray-400">
-                    Stop wasting hours on repetitive data entry. The NREGA Automation Dashboard handles your most tedious tasks so you can focus on what matters.
+                    Stop wasting hours on repetitive data entry. NREGA Bot handles your most tedious tasks so you can focus on what matters.
                 </p>
                 <div id="downloads" class="mt-10">
                     <p class="text-gray-600 mb-4 dark:text-gray-400">Download the app and start your 30-day free trial instantly.</p>
                     <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4">
-                        <a href="https://nrega-dashboard.palojori.in/updates/NREGA-Dashboard-v2.4.4-Setup.exe" class="bg-blue-600 text-white font-bold px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors text-lg w-full sm:w-auto dark:bg-blue-500 dark:hover:bg-blue-600">Download for Windows</a>
-                        <a href="https://nrega-dashboard.palojori.in/updates/NREGA-Dashboard-v2.4.4-macOS.dmg" class="bg-gray-700 text-white font-bold px-6 py-3 rounded-lg hover:bg-gray-800 transition-colors text-lg w-full sm:w-auto dark:bg-gray-600 dark:hover:bg-gray-700">Download for macOS</a>
+                        <a href="https://nregabot.com/updates/NREGABot-v2.5.0-Setup.exe" class="bg-blue-600 text-white font-bold px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors text-lg w-full sm:w-auto dark:bg-blue-500 dark:hover:bg-blue-600">Download for Windows</a>
+                        <a href="https://nregabot.com/updates/NREGABot-v2.5.0-macOS.dmg" class="bg-gray-700 text-white font-bold px-6 py-3 rounded-lg hover:bg-gray-800 transition-colors text-lg w-full sm:w-auto dark:bg-gray-600 dark:hover:bg-gray-700">Download for macOS</a>
                     </div>
                     <p class="mt-6 text-sm text-gray-500 dark:text-gray-400">
                         <a href="versions.html" class="underline hover:text-blue-600 dark:hover:text-blue-400">Looking for an older version?</a>
@@ -202,7 +202,7 @@
         <section id="how-to-use" class="py-16 lg:py-20 bg-gray-100 dark:bg-black/50">
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16">
-                    <h2 class="text-4xl font-extrabold text-gray-900 dark:text-white">How to Use the Dashboard</h2>
+                    <h2 class="text-4xl font-extrabold text-gray-900 dark:text-white">How to Use the App</h2>
                     <p class="text-lg text-gray-600 dark:text-gray-400 mt-4 max-w-3xl mx-auto">Follow these simple instructions for each automation feature.</p>
                 </div>
 
@@ -406,12 +406,11 @@
         </section>
     </div>
 
-    <!-- UPDATED FOOTER SECTION -->
     <footer class="bg-white border-t dark:bg-gray-900 dark:border-gray-800">
         <div class="container mx-auto px-6 py-10">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center md:text-left">
                 <div>
-                    <h3 class="font-bold text-gray-900 dark:text-white">NREGA Dashboard</h3>
+                    <h3 class="font-bold text-gray-900 dark:text-white">NREGA Bot</h3>
                     <p class="text-sm text-gray-600 dark:text-gray-400 mt-2">&copy; 2025 Rajat Poddar. All rights reserved.</p>
                 </div>
                 <div>
