--- a/web/terms.html
+++ b/web/terms.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms & Conditions | NREGA Automation Dashboard</title>
-    <meta name="description" content="Terms and Conditions for the use of the NREGA Automation Dashboard application.">
+    <title>Terms & Conditions | NREGA Bot</title>
+    <meta name="description" content="Terms and Conditions for the use of the NREGA Bot application.">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,8 +26,8 @@
     <header class="bg-white/80 backdrop-blur-sm shadow-sm sticky top-0 z-50 border-b border-gray-200">
         <div class="container mx-auto px-4 sm:px-6 py-4 flex justify-between items-center">
             <a href="index.html" class="text-xl font-bold text-gray-900 flex items-center gap-2">
-                <img src="/logo.png" alt="NREGA Dashboard Logo" class="h-8 w-8 rounded-full">
-                <span>NREGA Dashboard</span>
+                <img src="/logo.png" alt="NREGA Bot Logo" class="h-8 w-8 rounded-full">
+                <span>NREGA Bot</span>
             </a>
             <a href="index.html" class="hidden md:inline-block bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors">&larr; Back to Home</a>
         </div>
@@ -40,7 +40,7 @@
                 <p class="text-lg text-gray-600 mt-4">Last updated: July 25, 2025</p>
             </div>
             
-            <p>Please read these Terms and Conditions ("Terms") carefully before using the NREGA Automation Dashboard ("the Application") operated by Rajat Poddar ("us", "we", or "our"). Your access to and use of the Application is conditioned on your acceptance of and compliance with these Terms.</p>
+            <p>Please read these Terms and Conditions ("Terms") carefully before using NREGA Bot ("the Application") operated by Rajat Poddar ("us", "we", or "our"). Your access to and use of the Application is conditioned on your acceptance of and compliance with these Terms.</p>
             
             <h3>1. License</h3>
             <p>We grant you a revocable, non-exclusive, non-transferable, limited license to download, install, and use the Application strictly in accordance with these Terms.</p>
@@ -74,7 +74,7 @@
 
     <footer class="bg-white border-t">
         <div class="container mx-auto px-6 py-8 text-center text-gray-600 text-sm">
-            <p>&copy; 2025 NREGA Automation Dashboard by Rajat Poddar. All rights reserved.</p>
+            <p>&copy; 2025 NREGA Bot by Rajat Poddar. All rights reserved.</p>
         </div>
     </footer>
 
