--- a/web/index.html
+++ b/web/index.html
@@ -165,7 +165,7 @@
                                         <span class="font-semibold">Send Screenshot:</span> Email the payment confirmation screenshot to our support address.
                                          <div class="bg-gray-100 dark:bg-gray-700 p-3 rounded-md mt-2 text-center">
                                             <p class="text-sm text-gray-500 dark:text-gray-400">Email</p>
-                                            <p class="text-lg font-mono font-semibold">rajatpoddar@outlook.com</p>
+                                            <p class="text-lg font-mono font-semibold">nregabot@gmail.com</p>
                                         </div>
                                     </li>
                                     <li>
