--- a/web/refund.html
+++ b/web/refund.html
@@ -51,7 +51,7 @@
             <p>In the rare event of a payment error or a technical issue that prevents you from activating a license key you have paid for, please contact our support team immediately. We will work with you to resolve the issue, which may include providing a new key or, in exceptional cases where we are at fault, processing a refund at our sole discretion.</p>
 
             <h3>Contact Us</h3>
-            <p>If you have any questions about this policy or are facing issues with your license key, please contact us at: <a href="mailto:rajatpoddar@outlook.com">rajatpoddar@outlook.com</a></p>
+            <p>If you have any questions about this policy or are facing issues with your license key, please contact us at: <a href="mailto:nregabot@gmail.com">nregabot@gmail.com</a></p>
         </div>
     </main>
 
