--- a/web/contact.html
+++ b/web/contact.html
@@ -38,7 +38,7 @@
                 <p class="mt-2 text-gray-600">For all inquiries, including technical support, license questions, and feedback, please send us an email. This is the best way to get a detailed response.</p>
                 <div class="mt-4 bg-gray-100 p-4 rounded-md text-center">
                     <p class="text-sm text-gray-500">Official Support Email</p>
-                    <a href="mailto:rajatpoddar@outlook.com" class="text-lg font-mono font-semibold text-blue-600 hover:underline">rajatpoddar@outlook.com</a>
+                    <a href="mailto:nregabot@gmail.com" class="text-lg font-mono font-semibold text-blue-600 hover:underline">nregabot@gmail.com</a>
                 </div>
             </div>
             <div class="bg-white p-8 rounded-lg shadow-md border">
