--- a/web/privacy.html
+++ b/web/privacy.html
@@ -73,7 +73,7 @@
             <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page. You are advised to review this Privacy Policy periodically for any changes.</p>
 
             <h3>6. Contact Us</h3>
-            <p>If you have any questions about this Privacy Policy, you can contact us at: <a href="mailto:rajatpoddar@outlook.com">rajatpoddar@outlook.com</a></p>
+            <p>If you have any questions about this Privacy Policy, you can contact us at: <a href="mailto:nregabot@gmail.com">nregabot@gmail.com</a></p>
         </div>
     </main>
 
