--- a/web/terms.html
+++ b/web/terms.html
@@ -68,7 +68,7 @@
             <p>We reserve the right, at our sole discretion, to modify or replace these Terms at any time. We will provide notice of any changes by posting the new Terms and Conditions on this page.</p>
 
             <h3>6. Contact Us</h3>
-            <p>If you have any questions about these Terms, you can contact us at: <a href="mailto:rajatpoddar@outlook.com">rajatpoddar@outlook.com</a></p>
+            <p>If you have any questions about these Terms, you can contact us at: <a href="mailto:nregabot@gmail.com">nregabot@gmail.com</a></p>
         </div>
     </main>
 
