--- a/web/versions.html
+++ b/web/versions.html
@@ -42,6 +42,23 @@
                 <div class="max-w-4xl mx-auto space-y-8">
                     
                     <div class="bg-white dark:bg-gray-800 p-6 rounded-lg border-2 border-blue-500 dark:border-blue-500 shadow-lg">
+                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.5.1 (NREGA Bot)</h3>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: July 29, 2025</p>
+                        <ul class="list-disc list-inside mt-4 space-y-2 text-gray-700 dark:text-gray-300">
+                            <li>✨ New Feature: Added full support for the Mozilla Firefox browser.</li>
+                            <li>✨ New Feature: Added an 'Export to CSV' option on all result tabs for easy data analysis.</li>
+                            <li>✨ New Feature: Added a 'Print' option to the 'MR Gen' tab to send muster rolls directly to the default printer.</li>
+                            <li>✨ New Feature: Replaced date text fields with an interactive calendar date-picker on the 'MR Gen' tab.</li>
+                            <li>🛠️ Improvement: Fully automated the 'Send Wagelist' tab, handling page navigation and financial year selection.</li>
+                            <li>🛠️ Improvement: Implemented a Hybrid Browser Mode where Chrome is now 'detachable' to persist login sessions.</li>
+                            <li>🐞 Bug Fix (Critical): Resolved a major performance issue that caused the application to lag or become unresponsive when focused.</li>
+                        </ul>
+                        <div class="mt-6 flex flex-col sm:flex-row gap-4">
+                            <a href="https://nregabot.com/updates/NREGABot-v2.5.1-Setup.exe" class="bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors text-center">Download for Windows</a>
+                            <a href="https://nregabot.com/updates/NREGABot-v2.5.1-macOS.dmg" class="bg-gray-700 text-white font-semibold px-5 py-2 rounded-lg hover:bg-gray-800 transition-colors text-center">Download for macOS</a>
+                        </div>
+                    </div>
+                    <div class="bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700 shadow-sm">
                         <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.5.0 (NREGA Bot)</h3>
                         <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: July 26, 2025</p>
                         <ul class="list-disc list-inside mt-4 space-y-2 text-gray-700 dark:text-gray-300">
