--- a/web/versions.html
+++ b/web/versions.html
@@ -40,8 +40,26 @@
                 </div>
 
                 <div class="max-w-4xl mx-auto space-y-8">
-                    
+
                     <div class="bg-white dark:bg-gray-800 p-6 rounded-lg border-2 border-blue-500 dark:border-blue-500 shadow-lg">
+                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.5.2 (NREGA Bot)</h3>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: July 29, 2025</p>
+                        <ul class="list-disc list-inside mt-4 space-y-2 text-gray-700 dark:text-gray-300">
+                            <li>✨ New Feature: Added 'Download Demo CSV' links to the app's footer for 'WC Gen' and 'IF Edit' tabs.</li>
+                            <li>🛠️ Major Overhaul (WC Gen): Replaced static defaults with a fully dynamic UI that loads categories live from the NREGA website.</li>
+                            <li>🛠️ Major Overhaul (IF Edit): Replaced static defaults with a fully configurable UI with separate settings for all three pages.</li>
+                            <li>🛠️ Improvement (IF Edit): Added a 'Convergence Work' switch to easily run automation for single-page or multi-page edits.</li>
+                            <li>🛠️ Improvement (IF Edit): Automation now supports adding multiple activities/materials to a work code via an updated iterative CSV format.</li>
+                            <li>🐞 Bug Fix (Critical): Fixed multiple startup crashes caused by missing theme definitions for new UI elements.</li>
+                            <li>🐞 Bug Fix: Corrected UI logic for enabling/disabling scheme name dropdowns in the 'IF Edit' tab.</li>
+                        </ul>
+                        <div class="mt-6 flex flex-col sm:flex-row gap-4">
+                            <a href="https://nregabot.com/updates/NREGABot-v2.5.2-Setup.exe" class="bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors text-center">Download for Windows</a>
+                            <a href="https://nregabot.com/updates/NREGABot-v2.5.2-macOS.dmg" class="bg-gray-700 text-white font-semibold px-5 py-2 rounded-lg hover:bg-gray-800 transition-colors text-center">Download for macOS</a>
+                        </div>
+                    </div>
+                    
+                    <div class="bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700 shadow-sm">
                         <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.5.1 (NREGA Bot)</h3>
                         <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: July 29, 2025</p>
                         <ul class="list-disc list-inside mt-4 space-y-2 text-gray-700 dark:text-gray-300">
