--- a/web/index.html
+++ b/web/index.html
@@ -100,9 +100,9 @@
                         <img src="/assets/MSR_Processor.png" alt="MSR Processor Screenshot" class="rounded-xl shadow-lg border border-gray-200 dark:border-gray-700 hover:shadow-2xl transition-shadow duration-300">
                         <img src="/assets/Generate_Wagelist.png" alt="Generate Wagelist Screenshot" class="rounded-xl shadow-lg border border-gray-200 dark:border-gray-700 hover:shadow-2xl transition-shadow duration-300">
                         <img src="/assets/Send_Wagelist.png" alt="Send Wagelist Screenshot" class="rounded-xl shadow-lg border border-gray-200 dark:border-gray-700 hover:shadow-2xl transition-shadow duration-300">
-                        <img src="/assets/Workcode_Abuwa.png" alt="Workcode Generator Screenshot" class="rounded-xl shadow-lg border border-gray-200 dark:border-gray-700 sm:col-span-2 lg:col-span-1 hover:shadow-2xl transition-shadow duration-300">
+                        <img src="/assets/Workcode.png" alt="Workcode Generator Screenshot" class="rounded-xl shadow-lg border border-gray-200 dark:border-gray-700 sm:col-span-2 lg:col-span-1 hover:shadow-2xl transition-shadow duration-300">
                         <img src="/assets/eMB_entry.png" alt="MB Entry Screenshot" class="rounded-xl shadow-lg border border-gray-200 dark:border-gray-700 hover:shadow-2xl transition-shadow duration-300">
-                        <img src="/assets/IF_Editor_Abuwa.png" alt="IF Editor Screenshot" class="rounded-xl shadow-lg border border-gray-200 dark:border-gray-700 hover:shadow-2xl transition-shadow duration-300">
+                        <img src="/assets/IF_Editor.png" alt="IF Editor Screenshot" class="rounded-xl shadow-lg border border-gray-200 dark:border-gray-700 hover:shadow-2xl transition-shadow duration-300">
                     </div>
                 </div>
 
