--- a/web/versions.html
+++ b/web/versions.html
@@ -36,12 +36,33 @@
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16">
                     <h2 class="text-4xl font-extrabold text-gray-900 dark:text-white">Version History & Downloads</h2>
-                    <p class="text-lg text-gray-600 dark:text-gray-400 mt-4 max-w-3xl mx-auto">Access the latest and previous releases.</p>
+                    <p class="text-lg text-gray-600 dark:text-gray-400 mt-4 max-w-3xl mx-auto">Access the latest and previous releases of NREGA Bot.</p>
                 </div>
 
                 <div class="max-w-4xl mx-auto space-y-8">
 
+                    <!-- NEW VERSION 2.5.3 BLOCK -->
                     <div class="bg-white dark:bg-gray-800 p-6 rounded-lg border-2 border-blue-500 dark:border-blue-500 shadow-lg">
+                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.5.3 (NREGA Bot)</h3>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: August 2, 2025</p>
+                        <ul class="list-disc list-inside mt-4 space-y-3 text-gray-700 dark:text-gray-300">
+                            <li>✨ **New Automation: Update Estimated Outcome** - Added a new tab to automate updating the "Estimated Outcome" for a list of work codes.</li>
+                            <li>✨ **New Automation: Duplicate MR Print** - Implemented a powerful new feature to find, save, and print duplicate Muster Rolls for multiple work codes in a single batch operation.</li>
+                            <li>✨ **UI Overhaul: Collapsible Navigation Menu** - Reorganized the left-side menu into expandable categories for a cleaner, more scalable interface.</li>
+                            <li>✨ **UI/UX: Dynamic "Open Folder" Prompt** - The app now asks to open the output folder after file-generating automations are complete.</li>
+                            <li>🛠️ **Major Improvement (IF Editor):** Redesigned the UI to be more intuitive and moved Page 3 settings (Activity Code, etc.) from the CSV to the main interface for greater flexibility.</li>
+                            <li>🐞 **Critical Bug Fix (Duplicate MR Print):** Completely rewrote the automation logic to correctly handle websites that require a full page reload between processing items in a loop, resolving persistent timeout errors.</li>
+                            <li>🐞 **Critical Bug Fix (IF Editor):** Fixed a recurring timing issue on Page 3 by implementing the correct sequence of pauses and browser actions, ensuring data is saved reliably.</li>
+                            <li>🛠️ **Improvement (File Management):** The "Duplicate MR Print" feature now saves PDFs into a structured, date-stamped, and Panchayat-named folder hierarchy.</li>
+                        </ul>
+                        <div class="mt-6 flex flex-col sm:flex-row gap-4">
+                            <a href="https://nregabot.com/updates/NREGABot-v2.5.3-Setup.exe" class="bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors text-center">Download for Windows</a>
+                            <a href="https://nregabot.com/updates/NREGABot-v2.5.3-macOS.dmg" class="bg-gray-700 text-white font-semibold px-5 py-2 rounded-lg hover:bg-gray-800 transition-colors text-center">Download for macOS</a>
+                        </div>
+                    </div>
+                    
+                    <!-- PREVIOUS VERSION 2.5.2 BLOCK -->
+                    <div class="bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700 shadow-sm">
                         <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.5.2 (NREGA Bot)</h3>
                         <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: July 29, 2025</p>
                         <ul class="list-disc list-inside mt-4 space-y-2 text-gray-700 dark:text-gray-300">
