--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>NREGA Bot | v2.5.4 | Automate NREGA Tasks</title>
+    <title>NREGA Bot: The Ultimate Tool for NREGA Task Automation</title>
     <meta name="description" content="Automate your NREGA tasks with NREGA Bot v2.5.4. Featuring new automations for Duplicate MR Printing and Updating Outcomes, a collapsible UI, and more.">
     <meta name="keywords" content="NREGA, MGNREGA, automation, FTO Generation, NREGA Bot, Jobcard Verification, MSR processor, wagelist, workcode generator, Palojori, Jharkhand, software, donation">
     <meta name="author" content="Rajat Poddar">
